--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-WELCOME TO SHREYASI'S WEBSITE <br>
+<h1> Shreyasi Periketi </h1> 
+<h2> Shreyasi Periketi </h2> 
+<h3> Shreyasi Periketi </h3> 
+<h4> Shreyasi Periketi </h4> 
+<h5> Shreyasi Periketi </h5> 
+<p> WELCOME TO SHREYASI'S WEBSITE </p>
 I am a student at MVSR
