--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 <h3> Shreyasi Periketi </h3> 
 <h4> Shreyasi Periketi </h4> 
 <h5> Shreyasi Periketi </h5> 
+<h6> Shreyasi Periketi </h6>
+<h7> Shreyasi Periketi </h7>
+<h8> Shreyasi Periketi </h8>
+<h9> Shreyasi Periketi </h9>
 <p> WELCOME TO SHREYASI'S WEBSITE </p>
 I am a student at MVSR
