--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <link rel=stylesheet href=a.css>
+<script src="b.js"></script>
+
 <h1> Shreyasi Periketi </h1> 
 <h2> Shreyasi Periketi </h2> 
 <h3> Shreyasi Periketi </h3> 
